--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,13 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
 
   <!-- import the webpage's javascript file -->
-  <script src="./script4.js"></script>
+  <!-- <script src="./script4.js"></script> -->
+  <!-- <script src="./data.js"></script> -->
+  <script src="./data-2.js"></script>
+  <script src="./script-5.js"></script>
   <script>
     // document.addEventListener("DOMContentLoaded", run);
-    document.addEventListener("DOMContentLoaded", runWithValidationData);
+    document.addEventListener("DOMContentLoaded", start);
   </script>
 </head>
 
